# UCM_Undergraduate_Research

./: .gitignore  Display_MNIST_Dataset.ipynb  PyTorch CNN Model.ipynb  Research Journal.rtf  pytorch_env.yml  store_MNIST_datasets.txt
.ipynb_checkpoints/: Display_MNIST_Dataset-checkpoint.ipynb  PyTorch CNN Model-checkpoint.ipynb  resize_MNIST_Datasets-checkpoint.ipynb
MNIST_data/: MNIST_Datasets.ipynb
emartinez/: Untitled.ipynb
jornelasmunoz/math_233_project_git/: CMakeLists.txt  FullMatrix.cpp  mnist.txt
lib/: CNN.py
math_233_project/: FullMatrix.h  MURA.h  main.cpp
models/: cnn_loss_data.npy  cnn_test_acc_data.npy  cnn_weights14x14  cnn_weights4x4  cnn_weights7x7  mnist_net.pth
notebooks/: AE.py  CNN - working.ipynb  CNN.py  CNN_For_All_Sizes.ipynb  CNN_Training_Notebook.ipynb  CNN_Training_Notebook_Noisy_Data.ipynb  CNN_Training_Notebook_Non_Noisy_Data.ipynb  Data Processing.ipynb  Display_MNIST_Dataset.ipynb  MNIST_with_trochvision.transforms() - 14x14.ipynb  MNIST_with_trochvision.transforms() - 28x28.ipynb  MNIST_with_trochvision.transforms() - 7x7.ipynb  Notes_and_Scratch.ipynb  Notes_and_Scratch.ipynb.orig  Project Overview.ipynb  Scratchpad.ipynb  Testing_JOM.ipynb  resize_MNIST_Datasets.ipynb  resize_MNIST_Datasets_v2.ipynb
old/: Research Journal.rtf
rmarcia_matlab_codes/: delta.eps  load_H.m  make6pin.m  make7pin.m  make_downsample.m  makeaper1.m  makeaper2.m  makeaper3.m  makecirc.m  makecirc2.m  makeface.m  makepin.m  maker.m  minterp.m  mymura.m  mymura1.m
slides_coded_aperture/: settings.tex  slides.aux  slides.nav  slides.snm  (+1 more)
(+994 files in other folders)
